--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -85,7 +85,8 @@
             const responses = {
                 "hai": "Hai juga!",
                 "bagaimana kabarmu?": "aku baik-baik saja",
-                "siapa namamu?": "aku chat boot"
+                "siapa namamu?": "aku chat boot",
+                "siapa yang membuat programmu": "Mas Arya yang ganteng"
             };
             return responses[input.toLowerCase()] || "Maaf saya tidak tau";
         }
