--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -86,9 +86,9 @@
                 "hai": "Hai juga!",
                 "bagaimana kabarmu?": "aku baik-baik saja",
                 "siapa namamu?": "aku chat boot",
-                "siapa yang membuat programmu": "Mas Arya yang ganteng"
+                "siapa yang membuatmu": "Mas Arya yang ganteng"
             };
-            return responses[input.toLowerCase()] || "Maaf saya tidak tau";
+            return responses[input.toLowerCase()] || "Maaf mungkin saya mengalami kesalahan berfikir";
         }
     </script>
 </body>
