--- a/webti/halaman1.html
+++ b/webti/halaman1.html
@@ -9,7 +9,10 @@
 <p><a href="halaman1.html">Halaman 1</a>|
 <a href="halaman2.html">Halaman 2</a>|
 <a href="halaman3.html">Halaman 3</a>|
-<a href="halaman4.html">Halaman 4</a></p>
+<a href="halaman3.html">Halaman 4</a>|
+<a href="halaman3.html">Halaman 5</a>|
+<a href="halaman3.html">Halaman 6</a>|
+<a href="halaman4.html">Halaman 7</a></p>
 <p>My first paragraph</p> 
 <marquee direction="down" width="250" height="200" behavior="alternate" style="border:solid">
   <marquee behavior="alternate">
