--- a/webti/halaman5.html
+++ b/webti/halaman5.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+<title>Belajar HTML</title>
+</head>
+<p><div style="background: #ccff33"><p align="center"><font size="7" color="black">Biodata Diri</font></p></div>
 <body>
 <h1>Selamat Datang</h1>
 <hr><p><a href="halaman1.html">Halaman 1</a>|
